# portfoliosMCP

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_QUICK_START.md  CLAUDE_DESKTOP_SETUP.md  CREDENTIALS.md  OKRsapi.md  README.md  SOAP_API_BEHAVIORS.md  claude_desktop_config_example.json  financial-plan-api-combined.md  get_token.py  portfolios-api.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_create_task.py
portfolios-apis/okrs-api-main/: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile-hasura-local  Dockerfile-local  Dockerfile.batch  Dockerfile.jobs  README.rst  alembic.ini  dev_trigger  docker-compose.yml  helmfile.yaml  poetry.toml  poetry_setup.sh  pyproject.toml  setup.cfg  tasks.py
portfolios-apis/okrs-api-main/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
portfolios-apis/okrs-api-main/.github/workflows/: cd.yaml  ci.yaml  dev1-cd.yaml  perf-cd.yaml
portfolios-apis/okrs-api-main/alembic/: env.py
portfolios-apis/okrs-api-main/alembic/migration_templates/: triggers.py.mako  triggers.yml
portfolios-apis/okrs-api-main/alembic/versions/: 1b42d1ec6eb8_merge_20201009093245_and_20201009141256.py  20200826150422_initial_database_setup.py  20200914152057_make_progress_points_polymorphic.py  20200921152000_add_starts_at_ends_at_and_achieved_at_.py  20201001100516_convert_columns_to_timestamptz.py  20201001154800_create_timestamp_function.py  20201001154838_recreate_timestamps_and_populate.py  20201006134829_break_out_polymorphic_columns.py  20201009093245_add_is_primary_and_unique_index_to_.py  20201009141256_add_fkey_constraints_to_progress_points.py  20201009235422_add_measured_at_to_progress_points.py  20201011153601_add_unique_index_to_work_item_.py  20201012121131_many_to_many_views.py  20201012121132_merging_two_migrations.py  20201012223141_add_data_source_to_key_result.py  20201020150945_objectives_belong_to_work_item_.py  20201021161251_key_results_value_type_is_not_null.py  20201022150728_add_progress_percentages_and_default_.py  20201023135839_changes_to_work_items.py  20201110114429_remove_objective_from_progress_points.py  20201111105753_remake_foreign_keys_for_cascading_delete.py  20201118112110_key_result_work_item_mapping_changes.py  20201118112710_measured_at_is_required_and_unique.py  20201119125408_eliminating_requirement_for_work_item_.py  20201119205629_adding_progress_percentage_fields_to_pp.py  20201119205915_create_objective_progress_points_view.py  20201120143805_autogen_fkeys_from_oa.py  (+126 more)
portfolios-apis/okrs-api-main/docker/: docker-entrypoint-local.sh  docker-entrypoint.sh  startup-local.sh
portfolios-apis/okrs-api-main/docker_batch/: docker-entrypoint.sh
portfolios-apis/okrs-api-main/hasura/: config.yaml
portfolios-apis/okrs-api-main/jobs/: ih_sync_job-development.yaml  ih_sync_job-production.yaml  ih_sync_job-staging.yaml
portfolios-apis/okrs-api-main/okrs_api/: account_delete.py  account_export.py  account_import.py  account_migrate.py  connexion_utils.py  database.py  http_client.py  main.py  pubnub_session.py  settings.py  tenant_parser.py  utils.py
portfolios-apis/okrs-api-main/openapi/: openapi.yml
portfolios-apis/okrs-api-main/tests/: conftest.py  models_loader.py  support.py  test_app.py  test_tenant_parser.py
portfolios-apis/okrs-api-main/tools/: connexion-controller.py  custom_migration.py  deleted-event-trigger-migration.py  hasura-role-cloner.py  ih_subscription_syncer.py  migrate_tenants.py  pts-jwt-generator.py  seeder.py  timestamp-migration.py
portfolios-apis/okrs-api-main/values/: hasura-values.yaml.gotmpl  okrs-api-values.yaml.gotmpl  postgresql-secrets-values.yaml.gotmpl
(+342 files in other folders)
